# simple-docker-http-server

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml  test.yaml
tests/: conftest.py  test_server.py
web/: web.py
